<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    android:paddingTop="12dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:layout_marginBottom="16dp"
        android:text="@string/t_login" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@null"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/t_login"
        android:src="@drawable/gift_present_icon"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/btn_blue"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:clickable="false"
        android:focusable="true"
        android:weightSum="1.0"
        >

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@drawable/gift_present_icon"
            android:contentDescription="@string/login"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff" />

        </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/or" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/btn_darkblue"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:clickable="true"
        android:focusable="true"
        android:weightSum="1"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:contentDescription="@string/login_w_facebook"
            android:src="@drawable/gift_present_icon"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_w_facebook"
            android:textColor="#ffffff" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/find_password"
            android:textSize="24sp"
            android:layout_weight="5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="5"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:text="@string/sign_up" />
    </LinearLayout>


</LinearLayout>